--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "miragejs": "^0.1.47",
     "mockman-js": "^1.1.5",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-use": "^17.4.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
